# monitor_system

./: CMakeLists.txt  README.md  项目文档
client/: a.out  client.c  client.cpp  client_func.c  collect_local_data.cpp  function.h  login.cpp  monitor.conf  persistence  send_data_to_server.cpp  send_file.cpp
common/: cJSON.c  cJSON.h  color.h  common.c  common.cpp  common.h  head.h  monitor.h  msg.h  thread_poll.c  thread_poll.h
common/cJSON/: cJSON.cpp  cJSON.h
script/: CPUlog.sh  Disklog.sh  Memlog.sh  Syslog.sh
server/: a.out  function.h  monitor.conf  server.c  server.cpp  server_func.c  server_func.cpp
server/db_connection_pool/: db_connection_pool.c  db_connection_pool.cpp  db_connection_pool.h
server/thread_pool/: thread_poll.cpp  thread_poll.h
